--- a/Config/configs.json
+++ b/Config/configs.json
@@ -1,7 +1,7 @@
 {
     "myid": "836639482505723914",
     "bot": "906852381327769611",
-    "antoserver": {
+    "Anto's Server": {
         "id": "879287922061344848",
         "role": {
             "staff": {
@@ -108,7 +108,7 @@
             "online": "938431905542586449"
         }
     },
-    "antochill": {
+    "Antos's Chill": {
         "id": "945626562768818266",
         "stanze": {
             "welcome": "945626793623298049",
