--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "dependencies": {
         "@discordjs/rest": "^0.5.0",
+        "canvas": "^2.9.3",
         "captcha-canvas": "^3.1.0",
         "discord-api-types": "^0.33.5",
         "discord.js": "^13.8.1",
@@ -17,7 +18,5 @@
         "dotenv": "^16.0.1",
         "util": "^0.12.4"
     },
-    "engines": {
-        "node": "18.x.x"
-    }
+    "engines": {}
 }
