--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Anto426/Antobot.git"
+    "url": "https://github.com/Anto426/Antobot.git"
   },
   "author": "Anto426",
   "license": "ISC",
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Anto426/Antobot#readme",
   "dependencies": {
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "prompt-sync": "^4.2.0",
+    "readline": "^1.3.0"
   }
 }
