--- a/package.json
+++ b/package.json
@@ -1,23 +1,64 @@
 {
   "name": "antobot",
-  "version": "6.0.0",
-  "description": "This is a simple bot created by me for my ds server",
+  "version": "5.2.0",
+  "description": "",
   "main": "index.js",
+  "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.14.0",
+    "@distube/soundcloud": "^1.3.0",
+    "@distube/spotify": "^1.5.1",
+    "@distube/yt-dlp": "^1.1.3",
+    "@distube/ytdl-core": "^4.11.7",
+    "@distube/ytsr": "^1.1.9",
+    "ansi-regex": "^4.1.1",
+    "audit": "^0.0.6",
+    "busboy": "^1.6.0",
+    "discord-api-types": "^0.37.21",
+    "discord.js": "^14.7.1",
+    "distube": "^4.0.4",
+    "dotenv": "^16.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "ffmpeg-static": "^4.4.1",
+    "file-type": "^18.0.0",
+    "fs": "^0.0.1-security",
+    "ieee754": "^1.2.1",
+    "inherits": "^2.0.4",
+    "libsodium-wrappers": "^0.7.10",
+    "lodash.snakecase": "^4.1.1",
+    "lodash.uniqwith": "^4.5.0",
+    "opusscript": "^0.0.8",
+    "peek-readable": "^5.0.0",
+    "prompt-sync": "^4.2.0",
+    "readable-stream": "^3.6.0",
+    "readable-web-to-node-stream": "^3.0.2",
+    "readline": "^1.3.0",
+    "safe-buffer": "^5.2.1",
+    "streamsearch": "^1.1.0",
+    "string_decoder": "^1.3.0",
+    "strip-ansi": "^5.2.0",
+    "strtok3": "^7.0.0",
+    "token-types": "^5.0.1",
+    "ts-mixer": "^6.0.2",
+    "tslib": "^2.4.1",
+    "undici": "^5.13.0",
+    "util": "^0.12.5",
+    "util-deprecate": "^1.0.2",
+    "ws": "^8.11.0",
+    "yt-search": "^2.10.3",
+    "ytdl-core": "^4.11.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Anto426"
+    "url": "https://github.com/Anto426/Antobot.git"
   },
-  "author": "Anto426",
+  "author": "anto426",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^1.4.0",
-    "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
-    "fs": "^0.0.1-security",
-    "prompt-sync": "^4.2.0",
-    "util": "^0.12.5"
-  }
+  "bugs": {
+    "url": "https://github.com/Anto426/Antobot/issues"
+  },
+  "homepage": "https://github.com/Anto426/Antobot#readme"
 }
