--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
     "prompt-sync": "^4.2.0",
     "util": "^0.12.5"
   }
