--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "canvas": "^2.11.2",
+    "captcha-canvas": "^3.2.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
