--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "prompt-sync": "^4.2.0",
+    "skia-canvas": "^1.0.1",
     "util": "^0.12.5"
   },
   "engines": {
