--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "author": "Anto426",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^6.0.1",
     "axios": "^1.4.0",
     "canvas": "^2.11.2",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
     "moment": "^2.29.4",
+    "node-7z": "^3.0.0",
     "prompt-sync": "^4.2.0",
     "simple-git": "^3.20.0",
     "skia-canvas": "^1.0.1",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "zlib": "^1.0.5"
   },
   "engines": {
     "node": "20.x.x"
