--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,9 @@ jobs:
   build:
 
     runs-on: self-hosted
-
+    env:
+      TOKEN: TOKEN
+      GITTOKEN: GITTOKEN
     strategy:
       matrix:
         node-version: [20.x]
