--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,10 +10,10 @@ on:
 jobs:
   build:
 
-    runs-on: self-hosted
+    runs-on: self-hosted 
     env:
-      TOKEN: TOKEN
-      GITTOKEN: GITTOKEN
+      TOKEN: ${{ vars.TOKEN }}
+      GITTOKEN: ${{ vars.GITTOKEN }}
     strategy:
       matrix:
         node-version: [20.x]
