--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -9,22 +6,32 @@ on:
 
 jobs:
   build:
-
-    runs-on: self-hosted 
+    runs-on: self-hosted
     env:
-      TOKEN: ${{ vars.TOKEN }}
-      GITTOKEN: ${{ vars.GITTOKEN }}
+      TOKEN: ${{ secrets.TOKEN }}
+      GITTOKEN: ${{ secrets.GITTOKEN }}
     strategy:
       matrix:
         node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Stop Node.js process
+      run: pkill node
+
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm i
-    - run: ./run.sh
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run Node.js application
+      run: node index.js
+
+    - name: Complete task
+      run: echo "Task completed successfully."
+
