--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm install
 
     - name: Run Node.js application
-      run: node .
+      run: node . &
 
     - name: Complete task
       run: echo "Task completed successfully."
