--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "repo": "https://github.com/Anto426/Antobot",
   "license": "ISC",
   "dependencies": {
+    "cli-table3": "^0.6.3",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1"
   }
