--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "repo": "https://github.com/Anto426/Antobot",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.16.1",
+    "@distube/deezer": "^1.0.0",
+    "@distube/soundcloud": "^1.3.3",
+    "@distube/spotify": "^1.5.1",
+    "@distube/yt-dlp": "^1.1.3",
+    "chatgpt": "^5.2.5",
     "cli-table3": "^0.6.3",
     "discord.js": "^14.13.0",
+    "distube": "^4.1.1",
     "dotenv": "^16.3.1"
   }
 }
