--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@distube/soundcloud": "^1.3.3",
     "@distube/spotify": "^1.5.1",
     "@distube/yt-dlp": "^1.1.3",
-    "chatgpt": "^5.2.5",
+    "axios": "^1.6.2",
     "cli-table3": "^0.6.3",
     "discord.js": "^14.13.0",
     "distube": "^4.1.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "openai": "^4.24.0"
   }
 }
