--- a/setting/settings.json
+++ b/setting/settings.json
@@ -31,7 +31,7 @@
                 "hollyday.json",
                 "status.json",
                 "embed.json",
-                "emoji.json"
+                "description.json"
             ]
         }
     }
