--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@distube/spotify": "^1.5.1",
     "@distube/yt-dlp": "^1.1.3",
     "axios": "^1.6.2",
+    "canvas": "^2.11.2",
     "cli-table3": "^0.6.3",
     "discord.js": "^14.13.0",
     "distube": "^4.1.1",
