--- a/setting/settings.json
+++ b/setting/settings.json
@@ -1,7 +1,7 @@
 {
     "database": {
         "root": "/Database",
-        "listoldmebers": "oldmember.json"
+        "listoldmebers": "oldmember"
     },
     "base": {
         "commands": "/base/commands",
