Update Distube initialization with YtDlpPlugin and cookies support

--- a/setting/settings.json
+++ b/setting/settings.json
@@ -47,7 +47,8 @@
                 "hollyday.json",
                 "status.json",
                 "embed.json",
-                "description.json"
+                "description.json",
+                "cookies.json"
             ]
         }
     }
