--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@distube/deezer": "^1.1.0",
     "@distube/soundcloud": "^1.3.3",
     "@distube/spotify": "^1.6.0",
-    "@distube/yt-dlp": "^1.1.3",
+    "@distube/ytdl-core": "^4.14.4",
     "axios": "^1.6.8",
     "canvas": "^2.11.2",
     "cli-table3": "^0.6.4",
