--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@distube/soundcloud": "^1.3.3",
     "@distube/spotify": "^1.6.0",
     "@distube/ytdl-core": "^4.14.4",
+    "@distube/ytsr": "^2.0.4",
     "axios": "^1.6.8",
     "canvas": "^2.11.2",
     "cli-table3": "^0.6.4",
