--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@distube/deezer": "^1.1.0",
     "@distube/soundcloud": "^1.3.3",
     "@distube/spotify": "^1.6.0",
+    "@distube/yt-dlp": "^2.0.1",
     "@distube/ytdl-core": "^4.14.4",
     "@distube/ytsr": "^2.0.4",
     "axios": "^1.6.8",
     "canvas": "^2.11.2",
     "cli-table3": "^0.6.4",
     "discord.js": "^14.14.1",
-    "distube": "^4.1.1",
+    "distube": "^5.0.2",
     "dotenv": "^16.4.5",
     "libsodium-wrappers": "^0.7.13",
     "openai": "^4.29.2",
