Update Distube initialization

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@distube/direct-link": "^1.0.1",
     "@distube/soundcloud": "^2.0.3",
     "@distube/spotify": "^2.0.2",
-    "@distube/yt-dlp": "^2.0.1",
+    "@distube/youtube": "^1.0.4",
     "@distube/ytdl-core": "^4.14.4",
     "@distube/ytsr": "^2.0.4",
     "axios": "^1.7.7",
