Refactor: Rename holloway to holiday in EventEmbed class

--- a/setting/settings.json
+++ b/setting/settings.json
@@ -43,7 +43,7 @@
             "name": [
                 "owner.json",
                 "game.json",
-                "guild.json",
+                "guildtest.json",
                 "hollyday.json",
                 "status.json",
                 "embed.json",
