--- a/setting/settings.json
+++ b/setting/settings.json
@@ -43,7 +43,7 @@
             "name": [
                 "owner.json",
                 "game.json",
-                "guildtest.json",
+                "guild.json",
                 "hollyday.json",
                 "status.json",
                 "embed.json",
