--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "canvas": "^3.0.0-rc2",
     "cli-table3": "^0.6.5",
+    "colorthief": "^2.6.0",
     "discord.js": "^14.16.3",
     "distube": "^5.0.2",
     "dotenv": "^16.4.5",
