--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "libsodium-wrappers": "^0.7.15",
+    "node-fetch": "^2.7.0",
     "openai": "^4.67.3",
     "sodium-native": "^4.2.1"
   }
