--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "libsodium-wrappers": "^0.7.15",
     "node-fetch": "^2.7.0",
     "openai": "^4.67.3",
+    "sharp": "^0.33.5",
     "sodium-native": "^4.2.1"
   }
 }
