--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antobot",
-  "version": "6.1.1",
+  "version": "6.1.2 (beta)",
   "description": "",
   "main": "index.js",
   "scripts": {
