--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@distube/ytsr": "^2.0.4",
     "axios": "^1.7.9",
     "canvas": "^3.0.0-rc3",
+    "chalk": "^5.3.0",
     "cli-table3": "^0.6.5",
     "colors": "^1.4.0",
     "colorthief": "^2.6.0",
@@ -33,8 +34,8 @@
     "moment": "^2.30.1",
     "mysql2": "^3.11.5",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.7",
-    "openai": "^4.76.2",
+    "nodemon": "^3.1.9",
+    "openai": "^4.76.3",
     "sharp": "^0.33.5",
     "sodium-native": "^4.3.1",
     "yargs": "^17.7.2"
