feat: Add status management and embed utilities; implement dynamic status updates and error handling

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@distube/ytdl-core": "^4.15.1",
     "@distube/ytsr": "^2.0.4",
     "axios": "^1.7.9",
+    "boxen": "^8.0.1",
     "canvas": "^3.0.0-rc3",
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.5",
@@ -30,6 +31,8 @@
     "distube": "^5.0.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "figlet": "^1.8.0",
+    "gradient-string": "^3.0.0",
     "libsodium-wrappers": "^0.7.15",
     "moment": "^2.30.1",
     "mysql2": "^3.11.5",
