--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@distube/ytdl-core": "^4.15.8",
     "@distube/ytsr": "^2.0.4",
     "axios": "^1.7.9",
-    "canvas": "^3.0.0-rc3",
+    "canvas": "^3.0.0",
     "cli-table3": "^0.6.5",
     "colorthief": "^2.6.0",
     "discord.js": "^14.16.3",
@@ -28,7 +28,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "libsodium-wrappers": "^0.7.15",
-    "mysql2": "^3.11.5",
+    "mysql2": "^3.12.0",
     "node-fetch": "^2.7.0",
     "openai": "^4.77.0",
     "sharp": "^0.33.5",
