fix: correct syntax error in package.json by adding missing quotation mark for author field

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "dev": "clear || cls && nodemon index.js"
   },
-  "author": "Anto426,
+  "author": "Anto426",
   "repo": "https://github.com/Anto426/Antobot",
   "license": "ISC",
   "dependencies": {
