chore: update dependencies in package.json
- added @discordjs/opus at version ^0.10.0
- updated figlet from ^1.8.1 to ^1.8.2
- updated mysql2 from ^3.14.1 to ^3.14.2
- updated openai from ^5.8.4 to ^5.9.0
- remove opusscript

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "repo": "https://github.com/Anto426/Antobot",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "@distube/deezer": "^2.0.1",
     "@distube/direct-link": "^1.0.1",
@@ -31,16 +32,15 @@
     "distube": "^5.0.7",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "figlet": "^1.8.1",
+    "figlet": "^1.8.2",
     "gradient-string": "^3.0.0",
     "libsodium-wrappers": "^0.7.15",
     "moment": "^2.30.1",
-    "mysql2": "^3.14.1",
+    "mysql2": "^3.14.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "npm-check-updates": "^18.0.1",
-    "openai": "^5.8.4",
-    "opusscript": "^0.1.1",
+    "openai": "^5.9.0",
     "sharp": "^0.34.3",
     "sodium-native": "^5.0.6",
     "yargs": "^18.0.0"
