--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "distube": "^5.0.7",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
     "figlet": "^1.8.2",
     "gradient-string": "^3.0.0",
     "libsodium-wrappers": "^0.7.15",
