--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Create .env file
+        run: |
+          echo "TOKEN=${{ vars.TOKEN }}" > .env
+          echo "GITTOKEN=${{ vars.GITTOKEN }}" >> .env
+          echo "OPENAITOKEN=${{ vars.OPENAITOKEN }}" >> .env
+
       - name: Start Systemctl module "Antobot"
         run: echo ${{ vars.SUDO_PASSWORD }} | sudo -S systemctl start antobot
 
