--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "repo": "https://github.com/Anto426/Antobot",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "github:discordjs/opus",
+    "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "@distube/deezer": "^2.0.1",
     "@distube/direct-link": "^1.0.1",
