--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "gradient-string": "^3.0.0",
     "libsodium-wrappers": "^0.7.15",
     "moment": "^2.30.1",
-    "mysql2": "^3.14.2",
+    "mysql2": "^3.14.3",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "npm-check-updates": "^18.0.2",
     "openai": "^5.10.2",
     "sharp": "^0.34.3",
+    "sharp-phash": "^2.2.0",
     "sodium-native": "^5.0.6",
     "yargs": "^18.0.0"
   }
